--- a/part2/index.html
+++ b/part2/index.html
@@ -8,18 +8,11 @@
 </head>
 <body>
 
-    <div id="page1">
-        <div id="box"></div>
-    </div>
+    <div id="page1"></div>
     <div id="page2">
-        <!-- <div id="box"></div> -->
-        <h1>Hello guys</h1>
-        <h1>I'm Yashpreet</h1>
+        <h1>Experiences</h1>
     </div>
-    <div id="page3">
-        <div id="box"></div>
-    </div>
-
+    <div id="page3"></div>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
