--- a/part-7/index.html
+++ b/part-7/index.html
@@ -10,7 +10,12 @@
 </head>
 <body>
 
-    <div id="page1"></div>
+    <div id="page1">
+        <form action="POST">
+            <label for="Your name : "></label>
+            <input type="text">
+        </form>
+    </div>
     <div id="page2">
         <div id="move">
             <div class="marque">
